add readme day 1

--- a/day-1/index.html
+++ b/day-1/index.html
@@ -46,6 +46,7 @@
         <code>Your puzzle answer was 193598720.</code>
         
         <p>Both parts of this puzzle are complete! They provide two gold stars: **</p>
+<footer>by Adriana Rodriguez <a href=""></a></footer>
 <script src="./script.js"></script>
 <script src="./script2.js"></script>
 </body>
