--- a/day-2/index.html
+++ b/day-2/index.html
@@ -3,16 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puzzle  | Day 1</title>
-    <style>
-        body {
-            background: #0f0f23;
-            color: #cccccc;
-            font-family: "Source Code Pro", monospace;
-            font-size: 14pt;
-            min-width: 60em;
-        }
-    </style>
+    <title>Puzzle  | Day 2</title>
+    <link rel="stylesheet" href="../css/style.css">
    
 </head>
 <body>
